rework transaction handler to add common entity ids. integration test
Signed-off-by: Xin Li <xin@swirldslabs.com>